syntax = "proto3";

option csharp_namespace = "Grapio.Provider";

package grapio;

service FeatureFlags {
  rpc FetchFlags(FeatureFlagsRequest) returns (stream FeatureFlagReply);
}

message FeatureFlagsRequest {
  string requester = 1;
}

message FeatureFlagReply {
  string name = 1;
  oneof value {
    bool boolean_value = 2;
    string string_value = 3;
    int32 integer_value = 4;
    double double_value = 5;
    bytes structure_value = 6;
  }
}
